build: force add-modules property for IDE