@@ -99,6 +99,7 @@
     <maven.compiler.source>${target.java.version}</maven.compiler.source>
     <maven.compiler.target>${target.java.version}</maven.compiler.target>
     <maven.compiler.args>--add-modules jdk.incubator.vector -Xpkginfo:always</maven.compiler.args>
+    <maven.compiler.compilerArgs>--add-modules jdk.incubator.vector</maven.compiler.compilerArgs>
     <extra.compiler.args></extra.compiler.args>
     <argLine></argLine>
     <mainClass></mainClass>
